[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2024"

[lib]
# WASMとして出力するために必須の設定
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
# getrandom 0.2 系の js サポートを有効にする
getrandom = { version = "0.2.15", features = ["js"] }
# rand が getrandom 0.2 を使うように強制する
rand = { version = "0.8.5" }